// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Payment View should render correctly 1`] = `
<div
  className=""
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(BodyCopy)
        className="payment__heading"
        color="text.primary"
        component="h4"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;

exports[`Payment View should render correctly with cardList 1`] = `
<div
  className=""
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(BodyCopy)
        className="payment__heading"
        color="text.primary"
        component="h4"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      >
        Payment
      </Styled(BodyCopy)>
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Notification)
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
        status="success"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Offers)
        className="payment__offers"
        labels={
          Object {
            "paymentHeading": "Payment",
          }
        }
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(CreditCardList)
    className="payment__creditCard"
    creditCardList={
      Immutable.List [
        Object {
          "accountNo": "************1111",
          "addressDetails": Object {
            "addressLine1": "111 3rd Ave",
            "addressLine2": "",
            "city": "New York",
            "country": "US",
            "firstName": "new",
            "lastName": "address",
            "phone1": "9878909876",
            "state": "NY",
            "zipCode": "10003",
          },
          "billingAddressId": 160685,
          "ccBrand": "Visa",
          "ccType": "COMPASSVISA",
          "creditCardId": 73501,
          "defaultInd": false,
          "expMonth": "5 ",
          "expYear": "2024",
          "nameOnAccount": ".",
          "properties": null,
        },
      ]
    }
    showNotification="success"
  />
  <Styled(GiftCardList)
    className="payment__giftCard"
    giftCardList={
      Immutable.List [
        Object {
          "accountNo": "************1111",
          "addressDetails": Object {
            "addressLine1": "111 3rd Ave",
            "addressLine2": "",
            "city": "New York",
            "country": "US",
            "firstName": "new",
            "lastName": "address",
            "phone1": "9878909876",
            "state": "NY",
            "zipCode": "10003",
          },
          "billingAddressId": 160685,
          "ccBrand": "Visa",
          "ccType": "COMPASSVISA",
          "creditCardId": 73501,
          "defaultInd": false,
          "expMonth": "5 ",
          "expYear": "2024",
          "nameOnAccount": ".",
          "properties": null,
        },
      ]
    }
    labels={
      Object {
        "paymentHeading": "Payment",
      }
    }
    showNotification="success"
  />
</div>
`;

exports[`Payment View should render correctly with error 1`] = `
<div
  className=""
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(BodyCopy)
        className="payment__heading"
        color="text.primary"
        component="h4"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Notification)
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
        status="error"
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;

exports[`Payment View should render correctly with success 1`] = `
<div
  className=""
>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(BodyCopy)
        className="payment__heading"
        color="text.primary"
        component="h4"
        fontFamily="secondary"
        fontSize="fs16"
        fontWeight="extrabold"
        letterSpacing="normal"
        lineHeight="normal"
        textAlign="left"
      />
    </Styled(Col)>
  </Styled(Row)>
  <Styled(Row)
    fullBleed={true}
  >
    <Styled(Col)
      colSize={
        Object {
          "large": 12,
          "medium": 8,
          "small": 6,
        }
      }
    >
      <Styled(Notification)
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
        status="success"
      />
    </Styled(Col)>
  </Styled(Row)>
</div>
`;
